embed video in meal profile, and show source link